Fix spacing Issues

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -743,6 +743,7 @@ section {
   letter-spacing: 2px;
   color: yellow;
   font-weight: bold;
+  margin-bottom: 20px;
 }
 
 #contact .form-control {
